--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         a {
-            background-color: white;
+            background-color: red;
             color: #764ba2;
             padding: 10px 20px;
             border-radius: 8px;
