comment the a tag in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin-bottom: 20px;
         }
 
-        a {
+        {% comment %} a {
             background-color: red;
             color: #764ba2;
             padding: 10px 20px;
@@ -30,7 +30,7 @@
             text-decoration: none;
             font-weight: bold;
             transition: 0.3s ease;
-        }
+        } {% endcomment %}
 
         a:hover {
             background-color: #ddd;
